--- a/src/app/commun/chart-pie/chart-pie.component.html
+++ b/src/app/commun/chart-pie/chart-pie.component.html
@@ -8,7 +8,9 @@
         [legend]="showLegend" 
         [legendPosition]="legendPosition" 
         [labels]="showLabels" 
-        [doughnut]="isDoughnut" >
+        [doughnut]="isDoughnut"
+        [legendTitle]="legendTitle"
+    >
 </ngx-charts-pie-chart>
 </div>
     <!--     (select)="onSelect($event)" 
