--- a/src/app/avaliation/dobras/sloan/sloan.component.html
+++ b/src/app/avaliation/dobras/sloan/sloan.component.html
@@ -158,7 +158,7 @@
             </div>
         </form>
         <div *ngIf="showChart">
-            <div style="text-align: center; color: blue;">
+            <div style="text-align: center; color: whitesmoke;">
                 <div>
                     <mat-button-toggle-group name="chartSelected" [(ngModel)]="chartSelected">
                         <mat-button-toggle value="pie">{{selectedEvaluation.data | date:'dd/LL/yyyy'}}
@@ -168,7 +168,7 @@
                 </div>
                 <div *ngIf="chartSelected=='pie'">
                     <mat-label i18n>% Gordura Desejada <small>[{{gorduraDesejada}}]</small> : </mat-label>
-                    <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
+                    <mat-slider min="10" max="60" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
                         [disabled]="!fatChanged" (change)="getNewEvaluation()">
                     </mat-slider>
                     <button mat-mini-fab color="default" (click)="fatChanged = !fatChanged" *ngIf="!fatChanged">
