--- a/src/app/commun/chart-compare/chart-compare.component.scss
+++ b/src/app/commun/chart-compare/chart-compare.component.scss
@@ -3,5 +3,10 @@
     .chart-legend .legend-labels {
         display: flex;
         flex-wrap: wrap;
+        color: white;
     }
+    
+}
+.chart-legend .legend-label {
+    color: white !important;
 }
