--- a/src/app/commun/chart-compare/chart-compare.component.html
+++ b/src/app/commun/chart-compare/chart-compare.component.html
@@ -1,6 +1,6 @@
 <div class="charts">
-  <ngx-charts-bar-vertical-2d [view]="view" [scheme]="colorScheme" [results]="multi" [gradient]="gradient"
-    [xAxis]="showXAxis" [yAxis]="showYAxis" [legend]="showLegend" [showXAxisLabel]="showXAxisLabel"
+  <ngx-charts-bar-vertical-2d [view]="view" [scheme]="colorScheme" [results]="multi1" [gradient]="gradient"
+    [xAxis]="showXAxis" [yAxis]="showYAxis"  [showXAxisLabel]="showXAxisLabel"
     [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel1"
     [legendPosition]="legendPosition" [legendTitle]="legendTitle" [barPadding]="barPadding"
     [groupPadding]="groupPadding">
@@ -8,6 +8,24 @@
 
 
   <ngx-charts-bar-vertical-2d [view]="view" [scheme]="colorScheme" [results]="multi2" [gradient]="gradient"
+    [xAxis]="showXAxis" [yAxis]="showYAxis" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel"
+    [yAxisLabel]="yAxisLabel2" [legendPosition]="legendPosition" [legendTitle]="legendTitle" [barPadding]="barPadding"
+    [groupPadding]="groupPadding">
+  </ngx-charts-bar-vertical-2d>
+
+  <ngx-charts-bar-vertical-2d [view]="view" [scheme]="colorScheme" [results]="multi3" [gradient]="gradient"
+    [xAxis]="showXAxis" [yAxis]="showYAxis" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel"
+    [yAxisLabel]="yAxisLabel2" [legendPosition]="legendPosition" [legendTitle]="legendTitle" [barPadding]="barPadding"
+    [groupPadding]="groupPadding">
+  </ngx-charts-bar-vertical-2d>
+
+  <ngx-charts-bar-vertical-2d [view]="view" [scheme]="colorScheme" [results]="multi4" [gradient]="gradient"
+    [xAxis]="showXAxis" [yAxis]="showYAxis" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel"
+    [yAxisLabel]="yAxisLabel2" [legendPosition]="legendPosition" [legendTitle]="legendTitle" [barPadding]="barPadding"
+    [groupPadding]="groupPadding">
+  </ngx-charts-bar-vertical-2d>
+
+  <ngx-charts-bar-vertical-2d [view]="view" [scheme]="colorScheme" [legend]="showLegend" [results]="multi5" [gradient]="gradient"
     [xAxis]="showXAxis" [yAxis]="showYAxis" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel"
     [yAxisLabel]="yAxisLabel2" [legendPosition]="legendPosition" [legendTitle]="legendTitle" [barPadding]="barPadding"
     [groupPadding]="groupPadding">
