--- a/src/app/avaliation/antropometria/tran-weltman/tran-weltman.component.html
+++ b/src/app/avaliation/antropometria/tran-weltman/tran-weltman.component.html
@@ -107,11 +107,8 @@
         <br />
         <hr />
         <div *ngIf="selectedEvaluation">
-            <h4 style="text-align: center; color: blue;">
-                {{selectedEvaluation.data | date:'dd/LL/yyyy'}}
-            </h4>
             <div *ngIf="showChart">
-                <div style="text-align: center; color: blue;">
+                <div style="text-align: center; color: white;">
                     <div>
                         <mat-button-toggle-group name="chartSelected" [(ngModel)]="chartSelected">
                             <mat-button-toggle value="pie">{{selectedEvaluation.data | date:'dd/LL/yyyy'}}
