doc melhorias do programa(salgado)8713 pg14

--- a/src/app/avaliation/componente-morfologica/ircq/ircq.component.html
+++ b/src/app/avaliation/componente-morfologica/ircq/ircq.component.html
@@ -145,7 +145,7 @@
                     </tr>
                 </tbody>
             </table>
-            <em>Fonte: Heyward. V. & Stolarkcyz. Applied Body Composition Assessment, 1996</em>
+            <em><small> Heyward. V. & Stolarkcyz. Applied Body Composition Assessment, 1996</small></em>
         </div>
 
     </div>
